--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:layout_marginTop="21dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="launchEvents"
         android:layout_below="@+id/logo"
         android:id="@+id/eventBtn"
         android:text="@string/eventBtn"/>
