--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/settings"
-        android:orderInCategory="10"
-        android:title="Settings?"
-        app:showAsAction="never"/>
-    <item android:id="@+id/aboutUs"
         android:orderInCategory="20"
-        android:title="About Us"
+        android:title="Settings"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/aboutUs"
+        android:orderInCategory="10"
+        android:title="About Us"
+        app:showAsAction="never"/>
 </menu>
