--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,34 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Base application theme. -->
+    <style name="AppThemeD" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#262626</item>
+        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <!-- For splash screen -->
     <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowBackground">@drawable/launch</item>
+    </style>
+
+    <!-- For Dark and Light Mode -->
+    <style name="LightTheme" parent="AppTheme">
+        <item name="buttonColor">#e6e6e6</item>
+        <item name="textColor">#000000</item>
+        <item name="metaTextColor">#606060</item>
+        <item name="bgColor">#ffffff</item>
+
+    </style>
+
+    <style name="DarkTheme" parent="AppThemeD">
+        <item name="buttonColor">#242424</item>
+        <item name="textColor">#f0f0f0</item>
+        <item name="metaTextColor">#aeaeae</item>
+        <item name="bgColor">#121212</item>
+
     </style>
 
 </resources>
