--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -12,6 +12,8 @@
         android:textSize="15dp"
         android:layout_marginTop="20dp"
         android:autoLink="web"
+        android:textColor="?attr/textColor"
+
     />
 
     <ImageView
