--- a/app/src/main/res/layout/activity_agm.xml
+++ b/app/src/main/res/layout/activity_agm.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AGM">
+    tools:context=".AGM"
+    android:background="?attr/bgColor">
 
     <TextView
         android:layout_width="match_parent"
