--- a/app/src/main/res/layout/activity_agm.xml
+++ b/app/src/main/res/layout/activity_agm.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AGM"
+    android:orientation="vertical"
     android:background="?attr/bgColor">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Annual General Meetings"
+        android:textColor="?attr/textColor"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:layout_gravity="center" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/AGMrecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="To be filled in..."
-    />
+        android:scrollbars="vertical"
+        >
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.recyclerview.widget.RecyclerView>
+
+</LinearLayout>
