--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,4 +73,21 @@
         android:textColor="?attr/textColor"
         android:background="?attr/buttonColor"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="21dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="launchMap"
+        android:layout_below="@+id/socialBtn"
+        android:id="@+id/location"
+        android:text="Location"
+        android:textColor="?attr/textColor"
+        android:background="?attr/buttonColor"/>
+
 </RelativeLayout>
