--- a/app/src/main/res/layout/activity_others.xml
+++ b/app/src/main/res/layout/activity_others.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Camps"
+        android:text="Others"
         android:textColor="?attr/textColor"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -17,12 +17,11 @@
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/OtherRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
     </androidx.recyclerview.widget.RecyclerView>
-
 
 </LinearLayout>
