--- a/app/src/main/res/layout/activity_agm.xml
+++ b/app/src/main/res/layout/activity_agm.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        >
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
